--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -58,7 +58,7 @@
     "Yassin": "ياسين محمد",
     "Ahmed": "أحمد إسماعيل",
     "Graphics": "لجنة الرسوميات",
-    "Rahma": "رحمه سمير",
+    "Rahma": "رحمه مؤمن",
     "Mostafa": "مصطفى وائل",
     "Hardware": "لجنة الأجهزة",
     "Khaled": "خالد سلامة",
