--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -58,7 +58,7 @@
     "Yassin": "Yassin Mohamed",
     "Ahmed": "Ahmed Ismail",
     "Graphics": "Graphics Commitee",
-    "Rahma": "Rahma Samir",
+    "Rahma": "Rahma Momen",
     "Mostafa": "Mostafa Wael",
     "Hardware": "Hardware Commitee",
     "Khaled": "Khaled Salama",
